--- a/index.html
+++ b/index.html
@@ -17,50 +17,50 @@
                     <legend class="mb-4">Datos del Vehiculo</legend>
 
                     <div class="form-group row">
-                        <label class="col-sm-4 col-lg-4 col-form-label">Foto del Vhiculo:</label>
+                        <label class="col-sm-4 col-lg-4 col-form-label">Foto:</label>
                         <div class="col-sm-8 col-lg-8">
-                            <input type="file" id="mascota" name="mascota" class="form-control" placeholder="Nombre Mascota">
+                            <input type="file" id="fotoVehiculo" name="foto" class="form-control" >
                         </div>
                     </div>
 
                     <div class="form-group row">
                         <label class="col-sm-4 col-lg-4 col-form-label">Nombre:</label>
                         <div class="col-sm-8 col-lg-8">
-                            <input type="text" id="propietario" name="propietario" class="form-control"  placeholder="Nombre Dueño del Vehiculo">
+                            <input type="text" id="nombreVehiculo" name="nombre" class="form-control"  placeholder="Nombre Dueño del Vehiculo">
                         </div>
                     </div>
 
                     <div class="form-group row">
                         <label class="col-sm-4 col-lg-4 col-form-label">Marca:</label>
                         <div class="col-sm-8 col-lg-8">
-                            <input type="tel" id="telefono" name="telefono" class="form-control"  placeholder="Marca del Vehiculo">
+                            <input type="tel" id="marcaVehiculo" name="marca" class="form-control"  placeholder="Marca del Vehiculo">
                         </div>
                     </div>
 
                     <div class="form-group row">
                         <label class="col-sm-4 col-lg-4 col-form-label">Cilindraje:</label>
                         <div class="col-sm-8 col-lg-8">
-                            <input type="text" id="fecha" name="fecha" class="form-control">
+                            <input type="text" id="cilindrajeVehiculo" name="cilindraje" class="form-control">
                         </div>
                     </div>
 
                     <div class="form-group row">
                         <label class="col-sm-4 col-lg-4 col-form-label">Placa:</label>
                         <div class="col-sm-8 col-lg-8">
-                            <input type="text" id="hora" name="hora" class="form-control">
+                            <input type="text" id="placaVehiculo" name="placa" class="form-control">
                         </div>
                     </div>
                     <div class="form-group row">
                         <label class="col-sm-4 col-lg-4 col-form-label">Soat:</label>
                         <div class="col-sm-8 col-lg-8">
-                            <input type="text" id="hora" name="hora" class="form-control">
+                            <input type="date" id="soatVehiculo" name="soat" class="form-control">
                         </div>
                     </div>
 
                     <div class="form-group row">
                         <label class="col-sm-4 col-lg-4 col-form-label">Consumo de Combustible:</label>
                         <div class="col-sm-8 col-lg-8">
-                            <input type="text" id="hora" name="hora" class="form-control">
+                            <input type="text" id="consumoCombustible" name="consumo" class="form-control">
                         </div>
                     </div>
 
@@ -69,7 +69,7 @@
                     <div class="form-group row">
                         <label class="col-sm-4 col-lg-4 col-form-label">Descripción:</label>
                         <div class="col-sm-8 col-lg-8">
-                            <textarea id="sintomas" name="sintomas" class="form-control"></textarea>
+                            <textarea id="descripcion" name="descrip" class="form-control"></textarea>
                         </div>
                     </div>
 
