--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
 
                     <div class="form-group row">
                         <label class="col-sm-4 col-lg-4 col-form-label">Foto:</label>
-                        <div class="col-sm-8 col-lg-8">
-                            <input type="file" id="fotoVehiculo" name="foto" class="form-control" >
+                        <div class="col-sm-8 col-lg-8 contImg">
+                            <img src="./img/up.png" alt="" width="100px" class="img" >
+                            <label for="fotoVehiculo" class="labelFoto">Subir Imagen</label>
+                            <input type="file" id="fotoVehiculo" name="foto" class="form-control file" >
                         </div>
                     </div>
 
@@ -47,7 +49,7 @@
                     <div class="form-group row">
                         <label class="col-sm-4 col-lg-4 col-form-label">Placa:</label>
                         <div class="col-sm-8 col-lg-8">
-                            <input type="text" id="placaVehiculo" name="placa" class="form-control">
+                            <input type="text" id="placaVehiculo" name="placa" class="form-control" min="6" >
                         </div>
                     </div>
                     <div class="form-group row">
